# marko_plaintext_archive_lib

./: Cargo.toml  JetbrainsIdea.sh  README.md  build.sh  changelog.txt  todo.txt
produced/: ExampleProject.mpa
src/: lib.rs  pack_.rs  to_String.rs  unpack_.rs
tests/: ExampleProject.mpa  tests.rs
tests/ExampleProject/: Cargo.toml  main.rs
