[package]
name = "marko_plaintext_archive"
version = "0.1.0"
authors = ["Marko Vujnovic"]
edition = "2018"
description="Pack and unpack .mpa files. An .mpa file is a plain-text file which can contain a folder with files and subfolders inside it, all in one text file."
license="GPLv3"
repository="https://github.com/Marko-Vujnovic/marko_plaintext_archive"

#[patch.crates-io]
#yaml-rust = { git = "ssh://git@github.com/blicksyne/yaml-rust" }

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
async-process = "1.3.0"
futures-util = "0.3.21"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
serde_yaml = { version = "0.8" }
#serde_macros = "*"
yaml-rust = { git = "ssh://git@github.com/blicksyne/yaml-rust" }
terminal-menu = "2.0.2"
# marko_fs_types = { path = "./libs/marko_fs_types" }
marko_fs_types = { git = "ssh://git@github.com/Marko-Vujnovic/marko_fs_types", rev = "c0ccd3c" }

[dependencies.reqwest]
features = ["stream"]
version = "0.11"

[dependencies.tokio]
features = ["full"]
version = "1.17.0"


